# exchrate

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
exchrate/: __init__.py  cli.py  config.py  exrateparse.py
exchrate/exchrate/: exratedb.py  exratemain.py  exrateparse.py
exchrate/sql/: f_get_exchrate.sql  f_safe_divide.sql  tsp_return_param.sql  tsp_select_param.sql  tt_exchrate.sql  ttsp_ins_exchrate.sql
exchrate/test/: context.py  exchrate-test1.py  exchrate-test2.py
test/: test_conf.py  test_exrateparse.py
