[project]
name = "exchrate"
version = "0.1.0"
authors = [
    { name = "Anton Shestakov", email = "anton.shestakov2@gmail.com" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "click>=8.1.8",
    "httpx",
]

[project.scripts]
exchrate = "exchrate.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["exchrate"]
